--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -25,10 +26,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-   buildFeatures{
-       viewBinding true
-   }
+    buildFeatures {
+        viewBinding true
     }
+}
 
 dependencies {
 
@@ -50,4 +51,8 @@ dependencies {
     //viewModel
     implementation 'android.arch.lifecycle:viewmodel:1.1.1'
     annotationProcessor 'android.arch.lifecycle:compiler:1.1.1'
+    implementation 'com.google.dagger:hilt-android:2.42'
+    annotationProcessor 'com.google.dagger:hilt-compiler:2.42'
+
+    implementation 'com.tbuonomo:dotsindicator:4.2'
 }
